--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           VERSION_FILE_NAME=version.json
           VERSION_FILE_PATH=${{ github.workspace }}/web/src/$VERSION_FILE_NAME
           VERSION=$GITHUB_REF_NAME
-          NEW_CONTENT="{\"version\": \"$VERSION\"}"
+          NEW_CONTENT=`{\n\t\"version\": \"$VERSION\"\n\t\"released-at\": \"$(date +%d-%m-%Y" "%H:%M:%S)\"\n}`
 
           echo "$NEW_CONTENT" > $VERSION_FILE_PATH
 
