--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Add metadata file to deployment package
         run: |
           METADATA_FILE_NAME=metadata.json
-          METADATA_FILE_PATH=${{ github.workspace }}/web/src/$VERSION_FILE_NAME
+          METADATA_FILE_PATH=${{ github.workspace }}/web/src/$METADATA_FILE_NAME
           METADATA=$GITHUB_REF_NAME
           NEW_CONTENT="{\n\t\"version\":\"$VERSION\",\n\t\"released-at\":\"$(date +%d-%m-%Y" "%H:%M:%S)\"\n}"
           echo "$NEW_CONTENT" > $METADATA_FILE_PATH
