--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,14 @@ jobs:
 
       - name: Add metadata file to deployment package
         run: |
+          export TZ=US/Pacific
           METADATA_FILE_NAME=metadata.json
           METADATA_FILE_PATH=${{ github.workspace }}/web/src/$METADATA_FILE_NAME
           METADATA=$GITHUB_REF_NAME
-          NEW_CONTENT="{\n\t\"version\":\"$VERSION\",\n\t\"released-at\":\"$(date +%d-%m-%Y" "%H:%M:%S)\"\n}"
+          NEW_CONTENT="{
+            \"version\":\"${VERSION:-0.0.0.0-ephemeral-release}\",
+            \"released-at\":\"$(date +%d-%m-%Y" "%H:%M:%S)\"
+          }"
           echo "$NEW_CONTENT" > $METADATA_FILE_PATH
 
       - name: Install dependencies
