--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           export TZ=US/Pacific
           METADATA_FILE_NAME=metadata.json
           METADATA_FILE_PATH=${{ github.workspace }}/web/src/$METADATA_FILE_NAME
-          METADATA=$GITHUB_REF_NAME
+          VERSION=$GITHUB_REF_NAME
           NEW_CONTENT="{
             \"version\": \"${VERSION:-0.0.0.0-ephemeral-release}\",
             \"released-at\": \"$(date +%d-%m-%Y" "%H:%M:%S)\"
