--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           METADATA_FILE_PATH=${{ github.workspace }}/web/src/$METADATA_FILE_NAME
           VERSION=$GITHUB_REF_NAME
           NEW_CONTENT="{
-            \"version\": \"${VERSION:-0.0.0.0-ephemeral-release}\",
+            \"version\": \"$VERSION\",
             \"released-at\": \"$(date +%d-%m-%Y" "%H:%M:%S)\"
           }"
           echo "$NEW_CONTENT" > $METADATA_FILE_PATH
