--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm install aws
 
       - name: Destroy infrastructure
-        run: aws cloudformation delete-stack --stack-name ${{ vars.STACK_NAME }}
+        run: aws cloudformation delete-stack --stack-name ${{ vars.STACK_NAME }} --region ${{ vars.AWS_REGION }}
 
   static-analysis:
     runs-on: ubuntu-latest
