--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,13 @@ jobs:
       - name: Install AWS CLI
         run: npm install aws
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::030460844096:role/GitHubAction-AssumeRoleWithAction
+          role-session-name: GitHub_to_AWS_via_FederatedOIDC
+          aws-region: us-west-1
+
       - name: Destroy infrastructure
         run: aws cloudformation delete-stack --stack-name ${{ vars.STACK_NAME }} --region ${{ vars.AWS_REGION }}
 
