--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
 
   destroy-infra:
     runs-on: ubuntu-latest
-    if: '!cancelled()'
+    if: ${{ !cancelled() }}
     timeout-minutes: 10
     needs: ui-tests
     environment: DEV
