--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,4 +74,5 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Smoke test
+        if: ${{ ! vars.HOST }}
         run: bash web/test/scripts/smoke-test.sh https://${{ vars.PRIMARY_DOMAIN }}
