--- a/jest.config.json
+++ b/jest.config.json
@@ -1,4 +1,4 @@
 {
   "collectCoverage": true,
-  "collectCoverageFrom": ["web/src/**/*.js", "infra/lib/handlers/*.js"]
+  "collectCoverageFrom": ["web/src/**/*.js", "infra/lib/**/*.js"]
 }
