--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,7 @@
 sonar.projectKey=ascensus-digital-consulting_adc-website
 sonar.organization=ascensus-digital-consulting
-sonar.exclusions=coverage/*, web/test/*, infra/*
+sonar.exclusions=coverage/**/*, web/test/**/*, infra/test/**/*, cdk.out/**/*
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-sonar.coverage.exclusions=/coverage/**, /web/test/**, /infra/**
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=adc-website
