--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=ascensus-digital-consulting_adc-website
 sonar.organization=ascensus-digital-consulting
-sonar.exclusions=coverage/**/*, web/test/**/*, infra/test/**/*, cdk.out/**/*
+sonar.exclusions=coverage/**/*, web/test/**/*, infra/test/**/*, infra/bin/**/*, cdk.out/**/*
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 # This is the name and version displayed in the SonarCloud UI.
