--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,16 +49,8 @@ jobs:
       - name: Create stack
         run: |
           cdk deploy --require-approval never \
-            -c aliasRecordName=${{ vars.ALIAS_RECORD_NAME }} \
-            -c bucketName=${{ vars.BUCKET_NAME }} \
-            -c cachePolicyName=${{ vars.CACHE_POLICY_NAME }} \
-            -c deploymentName=${{ vars.DEPLOYMENT_NAME }} \
-            -c distributionName=${{ vars.DISTRIBUTION_NAME }} \
-            -c domains=${{ vars.DOMAINS }} \
-            -c viewerRequestHandlerName=${{ vars.VIEWER_REQUEST_HANDLER_NAME }} \
+            -c stackId=${{ vars.STACK_ID }} \
             -c host=${{ vars.HOST }} \
-            -c stackName=${{ vars.STACK_NAME }} \
-            -c hostedZoneId=${{ vars.HOSTED_ZONE_ID }} \
             -c zoneName=${{ vars.ZONE_NAME }} \
 
   smoke-test:
@@ -73,8 +65,8 @@ jobs:
 
       - name: Smoke test a production environment
         if: ${{ ! vars.HOST }}
-        run: bash web/test/scripts/smoke-test-prod.sh ${{ vars.PRIMARY_DOMAIN }}
+        run: bash web/test/scripts/smoke-test-prod.sh ${{ vars.ZONE_NAME }}
 
       - name: Smoke test a pre-production environment
         if: ${{ vars.HOST }}
-        run: bash web/test/scripts/smoke-test-preprod.sh ${{ vars.PRIMARY_DOMAIN }}
+        run: bash web/test/scripts/smoke-test-preprod.sh ${{ vars.HOST }}.${{ vars.ZONE_NAME }}
