--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,36 +24,36 @@ jobs:
       - name: Test website UI
         run: echo 'TODO - create UI tests'
         
-  static-analysis:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
+#  static-analysis:
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 10
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
 
-      - name: Install dependencies
-        run: npm install
+#      - name: Install dependencies
+#        run: npm install
 
-      - name: Test and coverage
-        run: npm test
+#      - name: Test and coverage
+#        run: npm test
 
-      - name: SonarQube scan
-        uses: SonarSource/sonarqube-scan-action@v4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#      - name: SonarQube scan
+#        uses: SonarSource/sonarqube-scan-action@v4
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      # Check the Quality Gate status.
-      - name: Check Sonar quality gate status
-        id: sonarqube-quality-gate-check
-        uses: sonarsource/sonarqube-quality-gate-action@master
-        with:
-          pollingTimeoutSec: 600
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#      # Check the Quality Gate status.
+#      - name: Check Sonar quality gate status
+#        id: sonarqube-quality-gate-check
+#        uses: sonarsource/sonarqube-quality-gate-action@master
+#        with:
+#          pollingTimeoutSec: 600
+#        env:
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   security-tests:
     runs-on: ubuntu-latest
@@ -102,7 +102,9 @@ jobs:
   tag-with-version:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    needs: [static-analysis, security-tests, ui-tests]
+#    needs: [static-analysis, security-tests, ui-tests]
+    needs: [security-tests, ui-tests]
+
 
     steps:
       - name: Checkout repository
